# lastchaos-client

./: .gitignore  .lastchaos_full_bundle.env.example  AGENTS.md  CLIENT_BOOTSTRAP.md  CMakeLists.txt  DISTRIBUTION.md  INSTALL.md  MACOS_FULL_PORT_PLAN.md  MIGRATION_LC2018_DXVK.md  NATIVE_MAC_BLOCKERS.md  Option_Game.xml.BL.VK  Option_Game.xml.BLess  PORTING.md  Readme.txt  appveyor.yml  multi.bat
.github/workflows/: cross-platform-build.yml  distribution-matrix.yml  porting-matrix.yml  windows-build.yml  windows-build.yml.disabled
Classes/: Character.ecl  CharacterBase.ecl  ColorController.ecl  Dummy.ecl  Enemy.ecl  ItemObjects.ecl  Items.ecl  Merchant.ecl  MessageView.ecl  Missile.ecl  Pet.ecl  RestrictedField.ecl  Slave.ecl  StatueEnemy.ecl  SunMoon.ecl  TerrainEntity.ecl  TrapEnemy.ecl  WaterHolder.ecl  WaterHolderMarker.ecl  WildPet.ecl  ZombieEnemy.ecl
Nksp_native/: CMakeLists.txt
Nksp_probe/: CMakeLists.txt  stubs.cpp
Shaders/: Add.sha  Base.sha  BaseTransparent.sha  Color.sha  Default.sha  Detail.sha  Detail_Specular.sha  Glass.sha  Invisible.sha  MultiLayer.sha  NiceWater.sha  Nksp.vulkan-cache  NoShadow.sha  NormalMap.sha  Reflection+Specular.sha  Reflection.sha  Shadow.sha  Specular.sha  Translucent.sha  WaterShader.sha
macos/: README.md
platform/: README.md
platform/linux/: install_linux.sh
platform/macos/: install_macos.sh
platform/windows/: install_windows.bat
porting/: CMakeLists.txt
porting/include/lastchaos_port/: platform.h
porting/src/: login_check.cpp  platform.cpp  probe.cpp
scripts/: assert_no_legacy_workflows.sh  bootstrap_macos_deps.sh  build_cross_platform.bat  build_cross_platform.sh  build_distribution_bundle.sh  build_full_macos_app.sh  build_macos_app.sh  check_generated_headers.sh  classify_nksp_unresolved_symbols.sh  create_macos_dmg.sh  generate_entitiesmp_headers.sh  generate_es_header_stubs.sh  install_linux.sh  install_macos.sh  install_windows.bat  lib_macos_app_bundle.sh  package_full_macos_app.sh  report_nksp_unresolved_symbols.sh  upload_to_gofile.sh  validate_macos_bundle.sh  validate_porting_matrix.sh
source/: LCClient.sln  TlHelp32.h  conio.h  crtdbg.h  io.h  malloc.h  mmsystem.h  process.h  shlwapi.h
source/CWebPage/: CWebPage.sln  CWebPage.vcxproj  CWebPage.vcxproj.filters  cwebpage.h  dll.c
source/Common/: Common.vcxproj  Common.vcxproj.filters  CommonDef.h
source/Engine/: Define_BRA.h  Define_GAMIGO.h  Define_KOR.h  Define_RUS.h  Define_TCPD.h  Define_THAI.h  Define_USA.h  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  GameState.cpp  GlobalDefinition.h  GlobalDefinition.h.bak  Loading.cpp  LocalDefine.h  StdH.h  TCPD_Defines.h  TCPD_Manager.h
source/EntitiesMP/: Character.es  CharacterBase.es  Enemy.es  EnemyBase.es  EntitiesMP.vcxproj  Global.h  ModelHolder3.es  PetBase.es  Player.es  Player.h  PlayerView.es  PlayerWeapons.es  SlaveBase.es  Teleport.es  WildPet.es  WildPetBase.es  WorldBase.es  itemObjects.es
source/GameMP/: Console.cpp  Game.cpp  Game.h  GameMP.vcxproj
source/LCCrypt/: LCCRC32.h  LCCrypt.cpp  LCCrypt.h  LCCrypt.vcxproj  LCCrypt.vcxproj.filters  des3_randomkey.h  des3_static.h
source/LCCrypt.OLD/: LCCrypt.vcxproj  LCCrypt.vcxproj.filters
source/Nksp/: GLSettings.cpp  MainWindow.cpp  MainWindow.h  Nksp.cpp  Nksp.h  Nksp.vcxproj  NkspPlatformAdapters.cpp  NkspPlatformAdapters.h  SplashScreen.cpp
source/OpenAES/: CHANGELOG  CMakeLists.txt  OpenAES.vcxproj  OpenAES.vcxproj.filters  README
source/PersistentSymbolTool/: PersistentSymbolTool.cpp  PersistentSymbolToolDlg.cpp  PersistentSymbolTool_2010.vcxproj  StdAfx.h
source/Shaders/: DefaultShader.cpp  Shaders.vcxproj  ShadowShader.cpp  WaterShader.cpp
source/SharedMemory/: Ext_ipc_event.cpp  Ext_ipc_event.h  SharedMemory.vcxproj  SharedMemory_queue.cpp  SharedMemory_queue.h
source/dxso/: dxso_compiler.cpp  dxso_compiler.h  dxso_decoder.cpp  dxso_module.cpp  dxso_module.h  dxso_options.cpp  dxso_options.h  dxso_util.h  libdxso.vcxproj  libdxso.vcxproj.filters
source/dxvk/: dxvk_access.cpp  dxvk_access.h  dxvk_adapter.cpp  dxvk_adapter.h  dxvk_allocator.cpp  dxvk_allocator.h  dxvk_annotation.h  dxvk_barrier.cpp  dxvk_barrier.h  dxvk_bind_mask.h  dxvk_buffer.cpp  dxvk_buffer.h  dxvk_cmdlist.cpp  dxvk_cmdlist.h  dxvk_compute.cpp  dxvk_compute.h  dxvk_constant_state.h  dxvk_context.cpp  dxvk_context.h  dxvk_context_state.h  dxvk_cs.cpp  dxvk_cs.h  dxvk_descriptor.cpp  dxvk_descriptor.h  dxvk_device.cpp  dxvk_device.h  dxvk_device_filter.cpp  dxvk_device_filter.h  dxvk_device_info.h  dxvk_extensions.cpp  dxvk_extensions.h  dxvk_fence.cpp  dxvk_fence.h  dxvk_format.cpp  dxvk_format.h  dxvk_framebuffer.cpp  dxvk_framebuffer.h  dxvk_gpu_event.cpp  dxvk_gpu_event.h  dxvk_gpu_query.cpp  (+63 more)
source/libdisplay-info/: LICENSE  README.md  cta.c  display-info.vcxproj  display-info.vcxproj.filters  displayid.c  dmt-table.c  edid.c  gtf.c  info.c  libdisplay-info.map  log.c  memory-stream.c  pnp-id-table.c  pnp.ids
source/libogg/: libogg_dynamic.vcxproj
source/libvorbis/: libvorbis_dynamic.vcxproj  libvorbisfile_dynamic.vcxproj
source/lpng/: libPng.vcxproj  pngpriv.h
source/lua/: lua.vcxproj  lua.vcxproj.filters
source/spirv/: libspirv.vcxproj  libspirv.vcxproj.filters  spirv_code_buffer.cpp  spirv_code_buffer.h  spirv_include.h  spirv_instruction.h  spirv_module.cpp  spirv_module.h
source/tinyxml/: tinyxml.vcxproj
source/util/: libutil.vcxproj  libutil.vcxproj.filters  thread.cpp  thread.h  util_bit.h  util_env.cpp  util_flush.cpp  util_flush.h  util_fps_limiter.cpp  util_fps_limiter.h  util_gdi.cpp  util_likely.h  util_lru.h  util_luid.cpp  util_matrix.cpp  util_matrix.h  util_misc.h  util_shared_res.cpp  util_singleton.h  util_sleep.cpp  util_sleep.h  util_small_vector.h  util_string.cpp  util_string.h  util_time.h  util_vector.h  util_version.h  util_win32_compat.h
source/vulkan/: vkcommon.vcxproj  vkcommon.vcxproj.filters  vulkan_loader.cpp  vulkan_loader.h  vulkan_names.cpp  vulkan_names.h  vulkan_util.h
source/wsi/: libwsi.vcxproj  libwsi.vcxproj.filters  wsi_edid.cpp  (+5 more)
tools/: sl_dta_tool.go
(+859 files in other folders)
